--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=larepublica.vecinal
-spring.mail.password=vecinal2021
+spring.mail.password=larepublica1382
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
